added all main feastues

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title class="bg-red-400">PatentNFT</title>
   </head>
-  <body style="background-color: #020d27">
+  <body style="background-color: #FFBF00 ">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
